ボタン名変更

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">TestButton</string>
     <string name="hello">Hello</string>
     <string name="world">World</string>
-    <string name="button">Button</string>
+    <string name="button">push</string>
 </resources>
